--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "corneltek/pux": "~1.3",
         "mikecao/flight": "1.2",
         "illuminate/support": "4.1",
-        "illuminate/database": "*",
+        "illuminate/database": "4.1",
         "twig/twig": "1.*",
         "twig/extensions": "*"
     },
